fix spacing

--- a/src/inlined.css
+++ b/src/inlined.css
@@ -5,13 +5,6 @@ body {
   font-family: Arial;
 }
 
-hr {
-  border: none;
-  background: rgba(0, 0, 0, 0.08);
-  height: 2px;
-  margin: 24px 0;
-}
-
 .grid {
   margin: 0 !important;
   padding: 0 !important;
@@ -36,7 +29,7 @@ hr {
   letter-spacing: 0.3px;
   text-align: left;
   color: #222121;
-  margin: 0 0 12px;
+  margin: 0 0 8px;
 }
 
 .h1 {
@@ -108,6 +101,14 @@ hr {
   font-weight: bold;
   color: #fff;
   padding: 7px;
+}
+
+hr,
+.divider {
+  border: none;
+  background: rgba(0, 0, 0, 0.08);
+  height: 2px;
+  margin: 24px 0;
 }
 
 .layout {
